[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
name = "kiss3d"
version = "0.35.0"

autoexamples = true
description = "3D graphics engine for Rust."
edition = "2024"
keywords = ["3D", "graphics", "OpenGL", "KISS"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/sebcrozet/kiss3d"

include = [
    "src/**/*.rs",
    "src/**/*.frag",
    "src/**/*.vert",
    "src/text/*.ttf",
    "examples/**/*.rs",
    "examples/media",
    "examples/Cargo.toml",
    "Cargo.toml",
    "LICENSE",
    "Readme.md",
]


[lib]
name = "kiss3d"
path = "src/lib.rs"

[dependencies]
bitflags = { version = "2.9.4", features = ["serde"] }
either = "1"
glow = "0.12"
image = { version = "0.25.8", default-features = false }
libc = "0.2"
nalgebra = "0.34.0"
num-traits = "0.2"
rusttype = { version = "0.8.3", features = ["gpu_cache"] }
serde = "1"
serde_derive = "1"
glutin = "0.26"
parry3d = "0.24.0"

[dev-dependencies]
env_logger = "0.11.6"
nalgebra = { version = "0.33.2", features = ["rand"] }
rand = "0.8"
